Bug 310412 - Size and position of the selection markers is incorrect if the zoom level is changed while an item is hovered and the mouse is not moved
Summary: Size and position of the selection markers is incorrect if the zoom level is ...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: general (other bugs)
Version First Reported In: 2.1
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-11-20 15:54 UTC by Elias Probst
Modified: 2013-08-24 19:01 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.1
Sentry Crash Report:


Attachments
Screenshot showing the described issue using KDE 4.9.3 (273.31 KB, image/png)
2012-11-20 15:54 UTC, Elias Probst
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Elias Probst 2012-11-20 15:54:13 UTC
Created attachment 75380 [details]
Screenshot showing the described issue using KDE 4.9.3

When changing the zoomlevel via keyboard shortcuts, the +/- (selection) overlay icon's position isn't updated in "Details view mode".

How to reproduce:
1. Set the view mode to "Details view mode"
2. Zoom to the max level
3. Hover any icon to make the + resp. - overlay icon appear
4. Use the keyboard shortcut Ctrl+- to decrease the zoomlevel

What happens:
The + resp. - overlay icon of the hovered icon is neither scaled, nor does it change its position until the mouse cursor is moved again.

See the attached screenshot for an example.

This issue does not apply to both other view modes.
Comment 1 Frank Reininghaus 2012-11-29 06:08:53 UTC
Thanks for the bug report, I can confirm this. It happens in all view modes for me though, and also when changing the zoom level with Ctrl+mouse wheel (without moving the mouse).
Comment 2 Emmanuel Pescosta 2013-08-24 19:01:34 UTC
Git commit f3ca94354b9e530272563897bd7d999cca119a85 by Emmanuel Pescosta.
Committed on 24/08/2013 at 19:00.
Pushed by emmanuelp into branch 'KDE/4.11'.

Adjust the size and position of the selection toggle on icon
resize (when changing the zoomlevel).
REVIEW: 112250
FIXED-IN: 4.11.1

M  +6    -0    dolphin/src/kitemviews/kitemlistwidget.cpp
M  +32   -11   dolphin/src/kitemviews/private/kitemlistselectiontoggle.cpp
M  +2    -0    dolphin/src/kitemviews/private/kitemlistselectiontoggle.h

http://commits.kde.org/kde-baseapps/f3ca94354b9e530272563897bd7d999cca119a85